--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">No more last minute vital stuff shortage, no more hand-written shopping lists, Your VSA will take care of that.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
