adding coinbase button

--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+            <!-- <button class="btn btn-success btn-large">Preorder</button> -->
+	    <a class="coinbase-button" data-code="1c4d7ce69a0d44313587f1412802f86d" href="https://coinbase.com/checkouts/1c4d7ce69a0d44313587f1412802f86d">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
           </div>
           <div class="row-fluid">
